<resources>
    <string name="app_name">Music Player</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_playing">Now Playing</string>
    <string name="playlist">App PlayList</string>
    <string name="device_songs">My songs</string>
    <!-- Now playing strings -->
    <string name="textView1">Now Playing</string>
    <string name="textView">Artist</string>
    <string name="forward">Forward</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="rewind">Rewind</string>
    <string name="start">Small text</string>
    <string name="song">Song</string>
    <string name="display_song">.mp3</string>
</resources>
